# robotics-codehub

./: .gitignore  README.md
embedded/esp32/: Cargo.toml
embedded/esp32/async-access-point/: Cargo.toml
embedded/esp32/async-access-point/src/: main.rs
embedded/esp32/async-hello-world/: Cargo.toml
embedded/esp32/async-hello-world/src/: main.rs
embedded/esp32/async-multicore-led/: Cargo.toml
embedded/esp32/async-multicore-led/src/: main.rs
embedded/esp32/async-serial-echo/: Cargo.toml
embedded/esp32/async-serial-echo/src/: main.rs
embedded/esp32/async-wifi-http/: Cargo.toml
embedded/esp32/async-wifi-http/src/: main.rs
embedded/esp32/hello-world/: Cargo.toml
embedded/esp32/hello-world/src/: main.rs
embedded/esp32/mcpwm/: Cargo.toml
embedded/esp32/mcpwm/src/: main.rs
embedded/stc51/: CMakeLists.txt  loop.c
embedded/stc51/at24c02/: at24c02.c  at24c02.h  storage_data.c
embedded/stc51/buzzer/: buzzer_music.c
embedded/stc51/digital_tube/: multi_digital_tube.c  single_digital_tube.c
embedded/stc51/ds1302/: ds1302.c
embedded/stc51/ds18b20/: ds18b20.c  ds18b20.h  ds18b20_read.c
embedded/stc51/i2c/: i2c.c  i2c.h
embedded/stc51/key/: check_key.c  number_key.c
embedded/stc51/lcd1602/: lcd1602.c  lcd1602.h  test_lcd1602.c
embedded/stc51/led/: blink_led.c  chaser_led.c  first_led.c
embedded/stc51/matrix_key/: check_matrix_key.c
embedded/stc51/matrix_led/: matrix_led.c
embedded/stc51/one_wire/: one_wire.c  one_wire.h
embedded/stc51/timer/: clock_timer.c
embedded/stc51/uart/: uart.c  uart.h  uart_recv.c  uart_send.c
