[workspace]
resolver = "3"

members = [
  "hello-world",
  "async-hello-world",
  "async-serial-echo",
  "async-multicore-led",
  "async-wifi-http",
  "async-access-point",
  "mcpwm"
]

[workspace.dependencies]
esp-hal = { version = "~1", features = ["esp32", "log-04", "unstable"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }

critical-section = "1.2.0"

esp-println = { version = "0.17.0", features = ["esp32", "log-04"]}

esp-backtrace = { version="0.19.0", features=["esp32", "panic-handler", "println"] }

esp-rtos = {version="0.3.0", features=["esp32", "embassy", "log-04"]}

esp-radio = {version="0.18.0", features=["esp32", "wifi", "ble", "log-04", "unstable"]}

esp-alloc = {version="0.10.0"}

embassy-executor = "0.10.0"

embassy-time = "0.5.1"

embassy-sync = "0.8"

embedded-io-async = "0.7.0"

embassy-net = { version = "0.8.0", features = [
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "dns",
] }

enumset = { version = "1.0.0"}

reqwless = { version = "0.14.0", default-features = false }

static_cell = "2.1.1"

[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'

