[package]
edition      = "2024"
name         = "async-wifi-http"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "async-wifi-http"
path = "./src/main.rs"

[dependencies]
esp-hal = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
critical-section = { workspace = true }
esp-println = { workspace = true }
esp-backtrace = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
esp-rtos = {version="0.3.0", features=["esp32", "embassy", "log-04", "esp-radio"]}
embedded-io-async ={ workspace = true }
static_cell = { workspace = true }
embassy-sync = { workspace = true }
embassy-net = { workspace = true }
reqwless = { workspace = true }
enumset = { workspace = true }
esp-radio = { workspace = true }
esp-alloc = { workspace = true }
